--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,3 +55,7 @@ expo.webp.animated=false
 # This one fixes a weird WebRTC runtime problem on some devices.
 # https://github.com/jitsi/jitsi-meet/issues/7911#issuecomment-714323255
 android.enableDexingArtifactTransform.desugaring=false
+
+# Use this property to enable or disable the Hermes JS engine.
+# If set to false, you will be using JSC instead.
+hermesEnabled=true
