--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doublesix",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^6.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-masked-view/masked-view": "0.2.8",
@@ -24,6 +25,7 @@
     "firebase": "^9.19.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
