--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,6 +123,11 @@ android {
         versionName "1.0.5"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     splits {
         abi {
             reset()
