--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
@@ -22,15 +21,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'DoubleSixApp' do
-  use_expo_modules!
-  post_integrate do |installer|
-    begin
-      expo_patch_react_imports!(installer)
-    rescue => e
-      Pod::UI.warn e
-    end
-  end
+target 'DoubleSix' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -51,6 +42,11 @@ target 'DoubleSixApp' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  target 'DoubleSixTests' do
+    inherit! :complete
+    # Pods for testing
+  end
 
   post_install do |installer|
     react_native_post_install(
